fix: width overflow on mobile

--- a/Front/src/styles/global.css
+++ b/Front/src/styles/global.css
@@ -16,7 +16,7 @@ body {
     font-family: var(--font-family);
     background-color: var(--bg-page);
     color: var(--text);
-    overflow-x: hidden;
+    max-width: 100vw;
 }
 
 button, input, textarea{
